counter section and slider section modified for slick

--- a/About.html
+++ b/About.html
@@ -19,6 +19,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -70,10 +76,6 @@
           <div class="city-content">
             <div class="control-wrap">
               <h3 class="city-heading">Caribbean's <span>Cities & Towns</span> </h3>
-              <div class="arrow">
-                <span class="left font-icon">left arrow</span>
-                <span class="right font-icon">right arroe</span>
-              </div>
             </div>
             <ul class="city-list">
               <li class="city-item">
@@ -406,10 +408,6 @@
               </div>
             </li>
           </ul>
-          <div class="deal-control">
-            <span class="left-btn btn-arrow">left-button</span>
-            <span class="right-btn btn-arrow">right-btn</span>
-          </div>
         </div>
       </section>
       <!-- offer section end here -->
@@ -524,7 +522,7 @@
               </li>
             </ul>
               <ul class="map-icon-list">
-                <li class="scan-icon scan" data-target="havana">map Icon</li>
+                <li class="scan-icon scan filter-active" data-target="havana">map Icon</li>
                 <li class="scan-icon scan" data-target="george">map Icon</li>
                 <li class="scan-icon scan" data-target="santa">map Icon</li>
                 <li class="scan-icon scan" data-target="kingstone">map Icon</li>
@@ -566,6 +564,10 @@
 
   </div>
   <!--container end-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+  integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="assets/js/script.js"></script>
 </body>
 
