--- a/Home.html
+++ b/Home.html
@@ -42,7 +42,7 @@
             <li class="nav-item"><a href="#FIXME" class="nav-link active" title="Home">Home</a></li>
             <li class="nav-item"><a href="About.html" class="nav-link" title="About">About</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Deals">Deals</a></li>
-            <li class="nav-item"><a href="re" class="nav-link" title="Reservation">Reservation</a></li>
+            <li class="nav-item"><a href="Reservation.html" class="nav-link" title="Reservation">Reservation</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Book Yours">Book Yours</a></li>
           </ul>
         </nav>
@@ -69,15 +69,15 @@
               <ul class="counter-list">
                 <li class="counter-item user">
                   <h5 class="counter-heading">population:</h5>
-                  <span class="counter-Num" data-target="8.66">0</span>
+                  <span class="counter-Num" data-target="8.66">0</span><span class="num-content">M</span>
                 </li>
                 <li class="counter-item world">
                   <h5 class="counter-heading">Territory:</h5>
-                  <span class="counter-Num" data-target="41.290">0</span>
+                  <span class="counter-Num" data-target="41.290">0</span><span class="num-content">KM2</span>
                 </li>
                 <li class="counter-item home">
                   <h5 class="counter-heading">AVG Price:</h5>
-                  <span class="counter-Num" data-target="1.100.200">0</span>
+                  <span class="num-content">$</span><span class="counter-Num" data-target="1.100.200">0</span>
                 </li>
               </ul>
               <div class="counter control">
