slider structure modified and html structure added

--- a/About.html
+++ b/About.html
@@ -19,7 +19,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
     integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
@@ -45,7 +45,7 @@
         </div>
         <nav class="navbar">
           <ul class="nav-list">
-            <li class="nav-item"><a href="Home.html" class="nav-link" title="Home">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link" title="Home">Home</a></li>
             <li class="nav-item"><a href="About.html" class="nav-link active" title="About">About</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Deals">Deals</a></li>
             <li class="nav-item"><a href="Reservation.html" class="nav-link" title="Reservation">Reservation</a></li>
@@ -460,49 +460,49 @@
           </div>
           <div class="tab-image">
             <ul class="tab-image-content">
-              <li class="image-item"  data-target="havana">
+              <li class="image-item" data-target="havana">
                 <div class="tab-wrapp">
-                <figure class="tab-fig">
-                  <img src="assets/images/cities-01.jpg" alt="havan">
-                </figure>
-                <div class="image-text">
-                  <h4 class="city-title">Havana</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
-                    sunt hic! Vitae eos tempora nam culpa cumque?</p>
+                  <figure class="tab-fig">
+                    <img src="assets/images/cities-01.jpg" alt="havan">
+                  </figure>
+                  <div class="image-text">
+                    <h4 class="city-title">Havana</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
                       sunt hic! Vitae eos tempora nam culpa cumque?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
+                      sunt hic! Vitae eos tempora nam culpa cumque?</p>
+                  </div>
                 </div>
-              </div>
                 <span class="scan icon-heading">Havana <span>population: 2M</span></span>
               </li>
               <li class="image-item" data-target="kingstone">
                 <div class="tab-wrapp">
-                <figure class="tab-fig">
-                  <img src="assets/images/cities-02.jpg" alt="Kingston">
-                </figure>
-                <div class="image-text">
-                  <h4 class="city-title">Kingston</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
-                    sunt hic! Vitae eos tempora nam culpa cumque?</p>
+                  <figure class="tab-fig">
+                    <img src="assets/images/cities-02.jpg" alt="Kingston">
+                  </figure>
+                  <div class="image-text">
+                    <h4 class="city-title">Kingston</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
                       sunt hic! Vitae eos tempora nam culpa cumque?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
+                      sunt hic! Vitae eos tempora nam culpa cumque?</p>
+                  </div>
                 </div>
-              </div>
                 <span class="scan icon-heading">Kingston<span>population: 2M</span></span>
               </li>
               <li class="image-item" data-target="george">
                 <div class="tab-wrapp">
-                <figure class="tab-fig">
-                  <img src="assets/images/cities-03.jpg" alt="George">
-                </figure>
-                <div class="image-text">
-                  <h4 class="city-title">George</h4>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
-                    sunt hic! Vitae eos tempora nam culpa cumque?</p>
+                  <figure class="tab-fig">
+                    <img src="assets/images/cities-03.jpg" alt="George">
+                  </figure>
+                  <div class="image-text">
+                    <h4 class="city-title">George</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
                       sunt hic! Vitae eos tempora nam culpa cumque?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
+                      sunt hic! Vitae eos tempora nam culpa cumque?</p>
+                  </div>
                 </div>
-              </div>
                 <span class="scan icon-heading">George<span>population: 2M</span></span>
               </li>
               <li class="image-item" data-target="santa">
@@ -513,7 +513,7 @@
                   <div class="image-text">
                     <h4 class="city-title">Santa</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
-                    sunt hic! Vitae eos tempora nam culpa cumque?</p>
+                      sunt hic! Vitae eos tempora nam culpa cumque?</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores obcaecati molestias temporibus
                       sunt hic! Vitae eos tempora nam culpa cumque?</p>
                   </div>
@@ -521,12 +521,12 @@
                 <span class="scan icon-heading">Santa<span>population: 2M</span></span>
               </li>
             </ul>
-              <ul class="map-icon-list">
-                <li class="scan-icon scan filter-active" data-target="havana">map Icon</li>
-                <li class="scan-icon scan" data-target="george">map Icon</li>
-                <li class="scan-icon scan" data-target="santa">map Icon</li>
-                <li class="scan-icon scan" data-target="kingstone">map Icon</li>
-              </ul>
+            <ul class="map-icon-list">
+              <li class="scan-icon scan filter-active" data-target="havana">map Icon</li>
+              <li class="scan-icon scan" data-target="george">map Icon</li>
+              <li class="scan-icon scan" data-target="santa">map Icon</li>
+              <li class="scan-icon scan" data-target="kingstone">map Icon</li>
+            </ul>
             <div class="place-btn">
               <a href="#FIXME" class="place-link" title="Discover All Places">Discover All Places</a>
             </div>
@@ -566,8 +566,8 @@
   <!--container end-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
-  integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
-  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="assets/js/script.js"></script>
 </body>
 
