--- a/Reservation.html
+++ b/Reservation.html
@@ -19,6 +19,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100&display=swap"
     rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -39,7 +48,7 @@
         </div>
         <nav class="navbar">
           <ul class="nav-list">
-            <li class="nav-item"><a href="Home.html" class="nav-link" title="Home">Home</a></li>
+            <li class="nav-item"><a href="index.html" class="nav-link" title="Home">Home</a></li>
             <li class="nav-item"><a href="About.html" class="nav-link" title="About">About</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Deals">Deals</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link active" title="Reservation">Reservation</a></li>
@@ -138,7 +147,7 @@
                   <label for="destination">Choose Your Destination</label>
                   <div class="input-text">
                     <select name="Destination" id="destination" class="destination">
-                      <option  value="select">ex. Switzerland,Lausanne</option>
+                      <option value="select">ex. Switzerland,Lausanne</option>
                       <option value="Europe">ex. Europe , Lausanne</option>
                       <option value="havana">ex. Havana , Kingston</option>
                     </select>
@@ -172,6 +181,10 @@
     <!-- scroll to up end here -->
   </div>
   <!--container end-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+    integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="assets/js/script.js"></script>
 </body>
 
