--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100&display=swap"
     rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Work+Sans:wght@100&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css"
+    integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -87,7 +96,7 @@
           </li>
           <li class="banner-item">
             <figure class="banner-fig">
-              <img src="assets/images/banner-01.jpg" alt="Banner Image">
+              <img src="assets/images/banner-02.jpg" alt="Banner Image">
             </figure>
             <div class="banner-content">
               <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
@@ -100,15 +109,15 @@
               <ul class="counter-list">
                 <li class="counter-item user">
                   <h5 class="counter-heading">population:</h5>
-                  <span class="counter-Num" data-target="8.66 M">M</span>
+                  <span class="counter-Num" data-target="8.66">0</span><span class="num-content">M</span>
                 </li>
                 <li class="counter-item world">
                   <h5 class="counter-heading">Territory:</h5>
-                  <span class="counter-Num" data-target="41.290 KM2">0</span>
+                  <span class="counter-Num" data-target="41.290">0</span><span class="num-content">KM2</span>
                 </li>
                 <li class="counter-item home">
                   <h5 class="counter-heading">AVG Price:</h5>
-                  <span class="counter-Num" data-target="1.100.200">0</span>
+                  <span class="num-content">$</span><span class="counter-Num" data-target="1.100.200">0</span>
                 </li>
               </ul>
               <div class="counter control">
@@ -131,15 +140,15 @@
               <ul class="counter-list">
                 <li class="counter-item user">
                   <h5 class="counter-heading">population:</h5>
-                  <span class="counter-Num" data-target="8.66">0</span>
+                  <span class="counter-Num" data-target="8.66">0</span><span class="num-content">M</span>
                 </li>
                 <li class="counter-item world">
                   <h5 class="counter-heading">Territory:</h5>
-                  <span class="counter-Num" data-target="41.290">0</span>
+                  <span class="counter-Num" data-target="41.290">0</span><span class="num-content">KM2</span>
                 </li>
                 <li class="counter-item home">
                   <h5 class="counter-heading">AVG Price:</h5>
-                  <span class="counter-Num" data-target="1.100.200">0</span>
+                  <span class="num-content">$</span><span class="counter-Num" data-target="1.100.200">0</span>
                 </li>
               </ul>
               <div class="counter control">
@@ -162,15 +171,15 @@
               <ul class="counter-list">
                 <li class="counter-item user">
                   <h5 class="counter-heading">population:</h5>
-                  <span class="counter-Num" data-target="8.66">0</span>
+                  <span class="counter-Num" data-target="8.66">0</span><span class="num-content">M</span>
                 </li>
                 <li class="counter-item world">
                   <h5 class="counter-heading">Territory:</h5>
-                  <span class="counter-Num" data-target="41.290">0</span>
+                  <span class="counter-Num" data-target="41.290">0</span><span class="num-content">KM2</span>
                 </li>
                 <li class="counter-item home">
                   <h5 class="counter-heading">AVG Price:</h5>
-                  <span class="counter-Num" data-target="1.100.200">0</span>
+                  <span class="num-content">$</span><span class="counter-Num" data-target="1.100.200">0</span>
                 </li>
               </ul>
               <div class="counter control">
@@ -311,6 +320,10 @@
 
   </div>
   <!--container end-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+    integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="assets/js/script.js"></script>
 </body>
 
